Fix d-f-align-items-center selector.

--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ main{
     justify-content: space-between;
 
 }
-.d-flex ul .d-f-align-items-center{
+.d-f-align-items-center{
     align-items: center;
 }
 .gap-1rem{
